# windtrader

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docstring-coverage.json  pyproject.toml  windtrader_architecture.html
.github/workflows/: ci.yml  docstring-badge.yml  release.yml
src/windtrader/: __init__.py  _jars.py  _types.py  api.py  cli.py  errors.py  jar_runner.py  manifest.py  validator.py
tests/: test_validate_smoke.py  test_validator_smoke.py  test_versions.py
