[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "windtrader"
version = "0.1.0"
description = "Python wrapper around windtrader-java for SysML v2 parse-only validation."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Westfall-io" }]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
]

[project.scripts]
windtrader = "windtrader.cli:main"

[tool.hatch.build]
packages = ["src/windtrader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
